<resources>
    <string name="app_name">Task1</string>
    <string name="settings_text">Settings</string>
    <string name="user_name_text">Lucile Alvarado</string>
    <string name="career_text">Career</string>
    <string name="home_address_text">Home address</string>
    <string name="view_my_contacts_text">view my contacts</string>
    <string name="edit_profile_text">Edit profile</string>
    <string name="go_to_the_settings_and_fill_out_the_profile">Go to the settings and fill out the profile</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="registration_text_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="register_text">register</string>
    <string name="or_text">or</string>
    <string name="remember_me_text">Remember me</string>
    <string name="password_text">Password</string>
    <string name="e_mail_text">E-mail</string>
    <string name="GOOGLE" translatable="false">google_icon</string>
    <string name="fill_out_text">Fill out the profile and go to the application!</string>
    <string name="let_s_get_text">Let\'s get acquainted</string>

</resources>