<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/settings_text"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_image_size"
            android:layout_height="@dimen/avatar_image_size"
            app:layout_constraintBottom_toTopOf="@+id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/avatar_placeholder" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/user_name_text"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toTopOf="@+id/user_profession"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/career_text"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/user_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/home_address_text"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_profession" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/endLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/facebook_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_button_logo"
            android:background="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/linkedin_button"
            app:layout_constraintEnd_toStartOf="@+id/linkedin_button"
            app:layout_constraintTop_toTopOf="@+id/linkedin_button"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/facebook_logo_vertical" />

        <ImageButton
            android:id="@+id/linkedin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:background="?attr/colorOnPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/linkedin_logo_vertical"
            tools:layout_editor_absoluteX="150dp" />

        <ImageButton
            android:id="@+id/vkontakte_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_button_logo"
            android:background="?attr/colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/linkedin_button"
            app:layout_constraintStart_toEndOf="@+id/linkedin_button"
            app:layout_constraintTop_toTopOf="@+id/linkedin_button"
            app:srcCompat="@drawable/vkontakte_logo_vertical" />

        <Button
            android:id="@+id/view_contacts_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:text="@string/view_my_contacts_text"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_small_16"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:backgroundTint="?attr/colorOnPrimary"
            android:foreground="@drawable/rectangle"
            android:text="@string/edit_profile_text"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_small"
            app:cornerRadius="@dimen/corner_radius"
            app:layout_constraintBottom_toTopOf="@+id/view_contacts_button"
            app:layout_constraintEnd_toEndOf="@+id/view_contacts_button"
            app:layout_constraintStart_toStartOf="@+id/view_contacts_button" />

        <TextView
            android:id="@+id/edit_profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:text="@string/go_to_the_settings_and_fill_out_the_profile"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_button"
            app:layout_constraintEnd_toEndOf="@+id/edit_profile_button"
            app:layout_constraintStart_toStartOf="@+id/edit_profile_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>